practice/toyproject/svc-toyproject.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  ports:
    - name: port
      port: 8000
      targetPort: 8000
  selector:
    app: main
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: svc-api1
spec:
  ports:
    - name: port
      port: 8000
      targetPort: 8000
  selector:
    app: api1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-api2
spec:
  ports:
    - name: port
      port: 8000
      targetPort: 8000
  selector:
    app: api2
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-db1
spec:
  ports:
    - name: port
      port: 3000
      targetPort: 3000
  selector:
    app: db1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-db2
spec:
  ports:
    - name: port
      port: 3000
      targetPort: 3000
  selector:
    app: db2
  type: ClusterIP
