practice/toyproject/ingress-toyproject.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-toyproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - myapp.toyproject.com
    secretName: tls-secret-toyproject
  rules:
  - host: myapp.toyproject.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-main
          servicePort: 8000
      - path: /api1
        backend:
          serviceName: svc-api1
          servicePort: 8000
      - path: /api2
        backend:
          serviceName: svc-api2
          servicePort: 8000
